# memfault-demo-tut1

./: .gitignore  README.md  environment.yml  memfault-plan.xml  plan.xml
firmware/: CMakeLists.txt  Makefile  toolchain-arm-none-eabi.cmake
firmware/app/: main.c  memfault_metrics_heartbeat_config.def  memfault_platform_config.h  memfault_platform_port.c  memfault_trace_reason_user_config.def
firmware/build_make/: app.elf
firmware/linker/: STM32F401.ld
firmware/startup/: startup_stm32f401.s
renode/: stm32f4.resc
renode-demo/: Makefile_renode_example.mk  memfault_platform_port.c  renode-config.resc  renode-example.c
